// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`responsive-design > 2xl:text-sm 1`] = `
"@media (min-width: 1536px) {
    .\\\\32xl\\\\:text-sm {
        font-size: 0.875rem;
        line-height: 1.25rem
    }
}"
`;

exports[`responsive-design > 2xl:text-sm 2`] = `
"@media (min-width: 1536px) {
    ._2xlctext-sm {
        font-size: 0.875rem;
        line-height: 1.25rem
    }
}"
`;

exports[`responsive-design > xl:text-sm 1`] = `
"@media (min-width: 1280px) {
    .xl\\\\:text-sm {
        font-size: 0.875rem;
        line-height: 1.25rem
    }
}"
`;

exports[`responsive-design > xl:text-sm 2`] = `
"@media (min-width: 1280px) {
    .xlctext-sm {
        font-size: 0.875rem;
        line-height: 1.25rem
    }
}"
`;
